--- a/css/styleCustom.css
+++ b/css/styleCustom.css
@@ -186,3 +186,110 @@ margin-left:auto;
   width: 100%;
   height: 100%;
 }
+.margin-bot{
+  margin-bottom: 2em;
+}
+.margin-card {
+    margin-bottom: 1em;
+}
+.pic-individual {
+    padding-bottom: 2em;
+    width: 639px;
+}
+.pad1 {
+    padding: 1em;
+  }
+  .padBot {
+    padding-bottom: 5em;
+  }
+.cursive {
+    font-family: 'Courgette', cursive;
+    font-size: 24px;
+    color: #3a3c4e;
+}
+.name {
+    text-align: right;
+}
+hr.style-five {
+    border: 0;
+    height: 0;
+    /* Firefox... */
+    box-shadow: 0 0 10px 1px black;
+}
+hr.style-five:after {
+    /* Not really supposed to work, but does */
+    content: "\00a0";
+    /* Prevent margin collapse */
+}
+.testTitle {
+    color: #000000;
+}
+.quotesx {
+  font-family: "Zilla Slab", serif !important;
+  /*text-align: center;*/
+  font-size: 42px;
+  color: #FFFFFF;
+  /*padding-top: 2em;*/
+  padding-bottom: 0.5em;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+.quotesxy {
+  font-family: "Zilla Slab", serif !important;
+  /*text-align: center;*/
+  font-size: 40px;
+  color: #FFFFFF;
+  /*padding-top: 2em;
+padding-bottom: 2em;*/
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+.hColor {
+  color: #000000;
+}
+.pColor {
+  color: #3A414E;
+}
+.padded {
+  padding: 1em;
+}
+.spacing {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.pic {
+  padding-bottom: 1em;
+}
+.pic img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin-right: auto;
+  margin-left: auto;
+
+}
+.quotesx {
+  font-family: "Zilla Slab", serif !important;
+  /*text-align: center;*/
+  font-size: 42px;
+  color: #FFFFFF;
+  /*padding-top: 2em;*/
+  padding-bottom: 0.5em;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+.quotesxy {
+  font-family: "Zilla Slab", serif !important;
+  /*text-align: center;*/
+  font-size: 40px;
+  color: #FFFFFF;
+  /*padding-top: 2em;
+padding-bottom: 2em;*/
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+.hColor {
+  color: #000000;
+}
+.pColor {
+  color: #3A414E;
+}
+.bodyCustomW{
+  background-color: #dbc4a6;
+}
